apps/clubs/trema/prod/httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: trema-ingress
  annotations:
    gatus.cedille/protocol: "tcp"
spec:
  virtualhost:
    fqdn: trema.prodv2.cedille.club
    tls:
      secretName: trema-tls
      minimumProtocolVersion: "1.3"
  routes:
    - conditions:
        - prefix: /
      enableWebsockets: true
      services:
        - name: trema
          port: http
