apps/clubs/trema/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trema-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    gatus.cedille/protocol: "tcp"
spec:
  ingressClassName: contour
  tls:
    - secretName: trema-tls
      hosts:
        - trema.prodv2.cedille.club
  rules:
    - host: trema.prodv2.cedille.club
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: trema
                port:
                  name: http
